finished with positions

--- a/css/main.css
+++ b/css/main.css
@@ -360,9 +360,6 @@ a {
 
 .menu-button.is-open .icon-cross {
   display: block;
-  height: 502px;
-  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 61% 51%, #ffa5ba 172px, #ffb8ca 172px);
-  background-size: 171px, cover;
 }
 
 .menu-button.is-open .icon-menu {
@@ -422,12 +419,13 @@ a {
   margin-bottom: 19px;
 }
 
-.how-its-made {
-  padding: 125px 20px 97px 20px;
-  background-color: #fff5f6;
+.hero {
+  display: block;
+  height: 502px;
+  background-image: url(../images/hero/mob-icecream.png), radial-gradient(circle farthest-side at 61% 51%, #ffa5ba 172px, #ffb8ca 172px);
+  background-size: 171px, cover;
   background-repeat: no-repeat;
-  background-position: center;
-  background-image: url("../images/how-its-made/mob-milk-background.png");
+  background-position: left 63% bottom 0, left 0 top 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -1068,14 +1066,17 @@ section {
 }
 
 .locations {
-  height: 765px;
+  height: 1375px;
+  margin-top: 212px;
   position: relative;
   background-color: var(--description-background-color);
 }
 
 .locations .container {
   position: absolute;
-  top: -102px;
+  top: -84px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .locations-list {
@@ -1083,8 +1084,8 @@ section {
 }
 
 .locations-list-item {
-  min-width: 220px;
-  min-height: 427px;
+  width: 220px;
+  height: 427px;
   padding: 43px 20px;
   margin-bottom: 20px;
   margin-left: auto;
@@ -1158,6 +1159,13 @@ section {
 }
 
 @media screen and (min-width: 768px) {
+  .locations {
+    height: 595px;
+    margin-top: 197px;
+  }
+  .locations .container {
+    top: -78px;
+  }
   .locations-item-title {
     width: 73px;
     height: 28px;
@@ -1220,6 +1228,16 @@ section {
 }
 
 @media screen and (min-width: 1200px) {
+  .locations {
+    background-image: url(../images/locations/desktop-locations-backgroung.png);
+    background-repeat: no-repeat;
+    background-size: 1280px;
+    height: 620px;
+    margin-top: 234px;
+  }
+  .locations .container {
+    top: -102px;
+  }
   .locations-list {
     margin-bottom: 86px;
   }
