--- a/src/sass/layout/_locations.scss
+++ b/src/sass/layout/_locations.scss
@@ -15,21 +15,25 @@
 }
 
 .locations {
-    height: 765px;
+    height: 1375px;
+    margin-top: 212px;
     position: relative;
     background-color: var(--description-background-color);
 
     & .container {
         position: absolute;
-        top: -102px;
+        top: -84px;
+        left: 50%;
+        
+        transform: translateX(-50%);
     }
 
     &-list {
         margin-bottom: -20px;
 
         &-item {
-            min-width: 220px;
-            min-height: 427px;
+            width: 220px;
+            height: 427px;
             padding: 43px 20px;
             margin-bottom: 20px;
             margin-left: auto;
@@ -109,6 +113,16 @@
 }
 
 @media screen and (min-width: 768px) {
+    
+    .locations {
+        height: 595px;
+        margin-top: 197px;
+
+        & .container {
+            top: -78px;
+        }
+    }
+
     .locations-item-title {
         width: 73px;
         height: 28px;
@@ -185,6 +199,19 @@
 }
 
 @media screen and (min-width: 1200px) {
+    
+    .locations {
+        background-image: url(../images/locations/desktop-locations-backgroung.png);
+        background-repeat: no-repeat;
+        background-size: 1280px;
+        height: 620px;
+        margin-top: 234px;
+    
+        & .container {
+            top: -102px;
+        }
+    }
+    
     .locations-list {
         margin-bottom: 86px;
 
