--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -153,19 +153,19 @@
     </button>
 
     <ul class="menu-list list" id="menu-list">
-      <li class="menu-item list">
+      <li class="menu-item list modal-menu-item">
         <a class="menu-link link active" href="#home">Home</a>
       </li>
-      <li class="menu-item list">
+      <li class="menu-item list modal-menu-item">
         <a class="menu-link link" href="#locations">About us</a>
       </li>
-      <li class="menu-item list">
+      <li class="menu-item list modal-menu-item">
         <a class="menu-link link" href="#recipe">How it’s made?</a>
       </li>
-      <li class="menu-item list">
+      <li class="menu-item list modal-menu-item">
         <a class="menu-link link" href="#products">Our products</a>
       </li>
-      <li class="menu-item list">
+      <li class="menu-item list modal-menu-item">
         <a class="menu-link link" href="#footer">Contact</a>
       </li>
     </ul>
