--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -9,6 +9,9 @@
     max-width: 1185px;
   }
 }
+button:hover{
+  cursor: pointer;
+}
 .hero-section {
   @media screen and (max-width: 767px) {
     padding-top: 137px;
@@ -401,4 +404,16 @@
 
 .arrow-right {
   fill: getColor(title);
+}
+ul.menu-list li.modal-menu-item{
+  margin: 0;
+  padding-top: 13px;
+  padding-bottom: 11px;
+  border: 1px solid #E18298;
+}
+li.modal-menu-item:hover a{
+  color: getColor(title);
+}
+li.modal-menu-item:hover{
+  cursor: pointer;
 }
