--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -54,7 +54,9 @@
             type="button"
             aria-label="Button to buy a product"
           >
-            Buy now  &#10095;
+            Buy now <svg class="btn-icon-two">
+              <use href="./images/sale/sprite.svg#vector-two"></use>
+          </svg>
             <svg class="menu-open" width="6" height="8">
               <use class="icon-open" href="./images/hero/vector.svg"></use>
             </svg>
@@ -149,7 +151,9 @@
       type="button"
       aria-label="Button to buy a product"
     >
-      Buy now &#10095;
+      Buy now <svg class="btn-icon-two">
+        <use href="./images/sale/sprite.svg#vector-two"></use>
+    </svg>
     </button>
 
     <ul class="menu-list list" id="menu-list">
