burger mobile ready

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,7 @@
                 </svg>
             </button>
 
-            <div class="header-menu-container is-hidden" id="header-menu-container" data-modal>
+            <div class="header-menu-container" id="header-menu-container" data-menu>
                 <div class="header-menu-wrapper">
                     <ul class="header-navigation-list list">
                     <li class="header-navigation-item">
