--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,4 +1,8 @@
 .header {
+  position: relative;
+
+  max-width: 1680px;
+  margin: 0 auto;
   padding-top: 30px;
 
   background-color: transparent;
@@ -90,6 +94,7 @@
     display: inline-flex;
     padding: 0px;
     margin: 0px;
+    z-index: 20;
 
     width: 20px;
     height: 12px;
@@ -119,8 +124,7 @@
 
   &-icon {
     display: block;
-    width: 20px;
-    height: 12px;
+    height: 15px;
 
     fill: black;
   }
@@ -143,14 +147,10 @@
     &.is-open {
       display: block;
 
-      & .header-logo-name,
-      & .header-logo-description {
-        color: $white-text-color;
-      }
-    }
-
-    &.is-hidden {
-      display: none;
+      // & .header-logo-name,
+      // & .header-logo-description {
+      //   color: $white-text-color;
+      // }
     }
   }
 
