--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
               ./images/products/tab/tab-products-pic1.png    1x,
               ./images/products/tab/tab-products-pic1@2x.png 2x
             "
-            media="(min-width: 768px) and max-width (1199px)"
+            media="(min-width: 768px) and (max-width: 1199px)"
           />
           <source
             srcset="
@@ -97,15 +97,15 @@
         <picture>
           <source
             srcset="
-              ./images/products/pc/pc-products-pic3.png    1x,
-              ./images/products/pc/pc-products-pic3@2x.png 2x
+              ./images/products/tel/tel-products-pic3.png    1x,
+              ./images/products/tel/tel-products-pic3@2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <source
             srcset="
-              ./images/products/pc/pc-products-pic3.png    1x,
-              ./images/products/pc/pc-products-pic3@2x.png 2x
+              ./images/products/tab/tab-products-pic3.png    1x,
+              ./images/products/tab/tab-products-pic3@2x.png 2x
             "
             media="(min-width: 768px) and (max-width: 1199px)"
           />
@@ -117,7 +117,7 @@
             media="(min-width: 1200px)"
           />
           <img
-            src="./images/products/pc/pc-products-pic3.png"
+            src="./images/products/tel/tel-products-pic3.png"
             alt="milkshakes"
           />
         </picture>
