--- a/src/sass/components/_how-made.scss
+++ b/src/sass/components/_how-made.scss
@@ -1,343 +1,334 @@
 .how-made {
-	width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-	background: #FFF5F6;
-	padding: 125px 0px 97px 0px;
-	z-index: -1;
-	@media screen and (min-width:768px) {
-		padding: 130px 0px 142px 0px;
-	}
-	@media screen and (min-width:1200px) {
-		// width: 100%;
-		padding: 125px 0px 139px 0px;
-	}
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background: #fff5f6;
+  padding: 125px 0px 97px 0px;
+  z-index: -1;
+  @media screen and (min-width: 768px) {
+    padding: 130px 0px 142px 0px;
+  }
+  @media screen and (min-width: 1200px) {
+    // width: 100%;
+    padding: 125px 0px 139px 0px;
+  }
 }
 
 .hw-title {
-	margin: 0 0 15px 0;
+  margin: 0 0 15px 0;
 
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 1.17;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.17;
 
-	text-align: center;
-	text-transform: uppercase;
+  text-align: center;
+  text-transform: uppercase;
 
-	color: getColor(accent);
+  color: getColor(accent);
 
-	@media screen and (min-width:768px) {
-		font-size: 26px;
-		line-height: 1.15;
-	}
-	@media screen and (min-width:1200px) {
-		font-size: 30px;
-		line-height: 1.13;
-		letter-spacing: 0.04em;
-	}
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.15;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.13;
+    letter-spacing: 0.04em;
+  }
 }
 
 .hw-subtitle {
-	margin: 0;
+  margin: 0;
 
-	font-weight: 400;
-	font-size: 34px;
-	line-height: 1.15;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.15;
 
-	text-align: center;
-	letter-spacing: 0.04em;
-	text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
 
-	color: getColor(title);
-	@media screen and (min-width:768px) {
-		font-size: 48px;
-	}
-	@media screen and (min-width:1200px) {
-		font-size: 58px;
-		line-height: 1.14;
-		letter-spacing: 0.06em;
-	}
+  color: getColor(title);
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
+  }
 }
 
 .hw-title-box {
-	margin-bottom: 26px;
-	color: getColor(title);
-	@media screen and (min-width:768px) {
-		margin-bottom: 50px;
-	}
-	@media screen and (min-width:1200px) {
-		margin-bottom: 55px;
-	}
+  margin-bottom: 26px;
+  color: getColor(title);
+  @media screen and (min-width: 768px) {
+    margin-bottom: 50px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 55px;
+  }
 }
 
 .hw-content-box {
-
-	margin-bottom: 39px;
-	@media screen and (min-width:768px) {
-		display: flex;
-		margin-bottom: 66px;
-	}
-	@media screen and (min-width:1200px) {
-		width: 1050px;
-		position: relative;
-		z-index: 5;
-		margin-bottom: 37px;
-		// padding: 0 42px 0 37px;
-		padding: 0;
-	}
+  margin-bottom: 39px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    margin-bottom: 66px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1050px;
+    position: relative;
+    z-index: 5;
+    margin-bottom: 37px;
+    // padding: 0 42px 0 37px;
+    padding: 0;
+  }
 }
 
 .hw-main-content {
-	max-width: 220px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 41px;
+  max-width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 41px;
 
-	@media screen and (min-width:768px) {
-		max-width: 340px;
-		margin: 50px 0 0 17px;
-	}
-	@media screen and (min-width:1200px) {
-		max-width: 463px;
-		margin: 20px 0 0 71px;
-	}
+  @media screen and (min-width: 768px) {
+    max-width: 340px;
+    margin: 50px 0 0 17px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 463px;
+    margin: 20px 0 0 71px;
+  }
 }
 
 .hw-main-content-1 {
-	margin: 0;
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 1.62;
+  margin: 0;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
 
-	@media screen and (min-width:768px) {
-		// margin: 30px 0 0 0;
-		font-size: 14px;
-		line-height: 1.8;
-	}
-	@media screen and (min-width:1200px) {
-		margin: 30px 0 0 0;
-		font-size: 16px;
-		line-height: 1.76;
-		letter-spacing: 0.04em;
-	}
+  @media screen and (min-width: 768px) {
+    // margin: 30px 0 0 0;
+    font-size: 14px;
+    line-height: 1.8;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 30px 0 0 0;
+    font-size: 16px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
 }
 
 .hw-main-content-2 {
-	margin: 30px 0 0 0;
-	color: getColor(secondary-text);
+  margin: 30px 0 0 0;
+  color: getColor(secondary-text);
 
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 1.62;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
 
-	@media screen and (min-width:768px) {
-		margin: 27px 0 0 0;
-		font-size: 14px;
-		line-height: 1.8;
-		letter-spacing: 0.04em;
-	}
-	@media screen and (min-width:1200px) {
-		margin: 30px 0 0 0;
-		font-size: 14px;
-		line-height: 1.94;
-	}
+  @media screen and (min-width: 768px) {
+    margin: 27px 0 0 0;
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 30px 0 0 0;
+    font-size: 14px;
+    line-height: 1.94;
+  }
 }
 
 .hw-main-content-3 {
-	font-weight: 500;
-	font-size: 12px;
-	line-height: 1.62;
-	margin: 30px 0 0 0;
-	color: getColor(secondary-text);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.62;
+  margin: 30px 0 0 0;
+  color: getColor(secondary-text);
 
-	@media screen and (min-width:768px) {
-		margin: 10px 0 0 0;
-		font-size: 14px;
-		line-height: 1.76;
-		letter-spacing: 0.04em;
-	}
-	@media screen and (min-width:1200px) {
-		margin: 29px 0 0 0;
-		font-size: 14px;
-		line-height: 1.94;
-	}
+  @media screen and (min-width: 768px) {
+    margin: 10px 0 0 0;
+    font-size: 14px;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 29px 0 0 0;
+    font-size: 14px;
+    line-height: 1.94;
+  }
 }
 
 .hw-btn {
-	display: flex;
-	align-items: center;
-	text-align: center;
-	box-sizing: border-box;
-	width: 176px;
-	height: 44px;
-	padding-left: 44px;
-	// padding-right: 35px;
-	margin-top: 20px;
-	margin-right: auto;
-	margin-bottom: 0px;
-	margin-left: 0px;
-	// font-family: DM Sans;
-	font-style: normal;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 1.29;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  box-sizing: border-box;
+  width: 176px;
+  height: 44px;
+  padding-left: 44px;
+  // padding-right: 35px;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  // font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
 
-	color: getColor(title);
-	background: getColor(white-color);
-	border-radius: 22px;
+  color: getColor(title);
+  background: getColor(white-color);
+  border-radius: 22px;
 
-	@media screen and (min-width:768px) {
+  @media screen and (min-width: 768px) {
+    margin-top: 57px;
+    font-size: 16px;
+    line-height: 1.31;
+    padding-left: 37px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 37px;
+  }
 
-		margin-top: 57px;
-		font-size: 16px;
-		line-height: 1.31;
-		padding-left: 37px;
+  cursor: pointer;
+  transition-property: background;
+  animation: $animation;
+  &::after {
+    display: inline-block;
+    content: '';
+    width: 8px;
+    height: 10px;
+    margin-left: 14px;
 
-	}
-	@media screen and (min-width:1200px) {
-		margin-top: 37px;
-	}
-
-	cursor: pointer;
-	transition-property: background;
-	animation: $animation;
-	&::after {
-		display: inline-block;
-		content: '';
-		width: 8px;
-		height: 10px;
-		margin-left: 14px;
-
-		background-image: url('../images/how-made-img/Vector 1.svg');
-	}
-	&:focus,
-	&:hover {
-		background: #ECEBEB;
-	}
+    background-image: url('../images/how-made-img/Vector 1.svg');
+  }
+  &:focus,
+  &:hover {
+    background: #ecebeb;
+  }
 }
 
 @media screen and (max-width: 767px) {
-	li:not(:last-child) {
-		margin-bottom: 35px;
-		p {
-			text-transform: uppercase;
-		}
-	}
+  .hw-card:not(:last-child) {
+    margin-bottom: 35px;
+    p {
+      text-transform: uppercase;
+    }
+  }
 }
 
 .hw-card-list {
-	max-width: 230px;
-	margin: 0;
-	padding: 0;
+  max-width: 230px;
+  margin: 0;
+  padding: 0;
 
-	@media screen and (min-width: 768px) {
-		max-width: 100%;
-		display: flex;
-		justify-content: space-between;
-		padding-right: 42px;
-	}
-	@media screen and (min-width: 1200px) {
-		padding-right: 0;
-	}
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 42px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-right: 0;
+  }
 }
 
 .hw-card {
-	@media screen and (min-width: 768px) {
-		width: 180px;
-	}
-	@media screen and (min-width: 1200px) {
-		width: 330px;
-	}
+  @media screen and (min-width: 768px) {
+    width: 180px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 330px;
+  }
 
-	img {
-		margin-bottom: 11px;
+  img {
+    margin-bottom: 11px;
 
-		@media screen and (min-width: 768px) {
-			margin-bottom: 33px;
-		}
-		@media screen and (min-width: 1200px) {
-			margin-bottom: 32px;
-		}
-	}
-	
-	p {
-		margin: 0 0 13px 0;
-		font-family: $heading-font;
-		font-weight: 400;
-		font-size: 36px;
-		line-height: 1.14;
-		letter-spacing: 0.04em;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 33px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 32px;
+    }
+  }
 
-		color: getColor(title);
+  p {
+    margin: 0 0 13px 0;
+    font-family: $heading-font;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 1.14;
+    letter-spacing: 0.04em;
 
-		@media screen and (min-width: 768px) {
-			font-size: 48px;
-			margin-bottom: 13px;
-		}
-		@media screen and (min-width: 1200px) {
-			font-size: 58px;
-		}
-	}
-	b {
-		font-size: 12px;
-		line-height: 1.7;
-		@media screen and (min-width: 768px) {
-			font-size: 14px;
-			line-height: 1.74;
-		}
-		@media screen and (min-width: 1200px) {
-			font-size: 16px;
-			line-height: 1.76;
-			letter-spacing: 0.02em;
-		}
-	}
+    color: getColor(title);
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      margin-bottom: 13px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 58px;
+    }
+  }
+  b {
+    font-size: 12px;
+    line-height: 1.7;
+    @media screen and (min-width: 768px) {
+      font-size: 14px;
+      line-height: 1.74;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 16px;
+      line-height: 1.76;
+      letter-spacing: 0.02em;
+    }
+  }
 }
 
 .how-made .container {
-	position: relative;
+  position: relative;
 }
 
 .cow-spray-bg {
-	@media screen and (max-width:767px) {
-		position: absolute;
-		left: -20px;
-		top: 641px;
-		width: 320px;
-		height: 133px;
-	
-		z-index: 0;
-		background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
-		@media screen and (min-device-pixel-ratio: 2),
-		screen and (min-resolution: 192dpi),
-		screen and (min-resolution: 2dppx) {
-			background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
-		}
-		background-repeat: no-repeat;
-		background-size: contain;
-		background-position: center;
-	}
-	@media screen and (min-width:1200px) {
-	
-		position: absolute;
-		left: -117px;
-		top: 217px;
-		width: 1282px;
-		height: 534px;
-	
-		z-index: 0;
-		background-image: url(../images/how-made-img/bg-milk-sprays-desktop.png);
-		@media screen and (min-device-pixel-ratio: 2),
-		screen and (min-resolution: 192dpi),
-		screen and (min-resolution: 2dppx) {
-			background-image: url(../images/how-made-img/bg-milk-sprays-desktop@2x.png);
-		}
-		background-repeat: no-repeat;
-		background-size: contain;
-		background-position: center;
-	}
+  @media screen and (max-width: 767px) {
+    position: absolute;
+    left: -20px;
+    top: 641px;
+    width: 320px;
+    height: 133px;
+
+    z-index: 0;
+    background-image: url(../images/how-made-img/bg-milk-sprays-mobile.png);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/how-made-img/bg-milk-sprays-mobile@2x.png);
+    }
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+  @media screen and (min-width: 1200px) {
+    position: absolute;
+    left: -117px;
+    top: 217px;
+    width: 1282px;
+    height: 534px;
+
+    z-index: 0;
+    background-image: url(../images/how-made-img/bg-milk-sprays-desktop.png);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../images/how-made-img/bg-milk-sprays-desktop@2x.png);
+    }
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
 }
-
-
-
-
-
