--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -30,6 +30,35 @@
         }
     }
 }
+
+.slider2{
+
+    width: 280px;
+    margin: 0 auto;
+    .item{
+        width: 54px;
+        // margin-right: 10px;
+            }
+    picture{
+        width: 54px;
+     
+    }
+    .slick-slide {
+        width: 54px;
+        .slick-active{
+            width: 0;
+            margin-right: 10px;
+            }
+            .slick-cloned{
+                width: 0;
+            }
+    }
+  
+// .slick-list.draggable{
+//     width: 280px;
+//     margin: 0;
+// }
+}
         .link-reviews{
             color: var(--accent-color);
             text-decoration-skip-ink: none;
@@ -220,23 +249,21 @@
         background-color: transparent;
     
         cursor: pointer;}
-        @media screen and(max-width:767px){
-            .button{
-                top: 98%;
-                margin-top: 47px;
-                // transform: translateY(-100%);
-            }
-            .left{
-                right:92%;
-         
-                }
+
+        // @media screen and(max-width:767px){
+        //     .button{
+        //      display: none;
+        //     }
+        //     .left{
+        //        display: none;
+        //         }
             
-            .right{
-                left: 92%;
-
-            }
-        }
-
+        //     .right{
+        //         display: none;
+          
+        //     }
+        // }
+    
         @media screen and(min-width:768px){
             .button{
                 top: 50%;
@@ -279,7 +306,98 @@
             display: block;
         }
     }
+.slider{
+.slick{
+    &-next{
+        @media screen and(max-width:767px){
+            display: none;  
+        }
+        @media screen and(min-width:768px){
+            right: -14.5px;  
+        }
+        @media screen and(min-width:1344px){
+            right: -85px;  
+        }  
+   
+    &::before{
+    background-image: url(../images/Reviews/Arrow-left.svg);
+    background-repeat: no-repeat;
 
+    font-family: 'slick';
+    font-size: 27px;
+    line-height: 1;
+
+    opacity: 1;
+
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    @media screen and(max-width:767px){
+        display: none;  
+    }
+    }
+}
+
+&-prev{
+    @media screen and(max-width:767px){
+    display: none;
+       
+    }
+    
+    @media screen and(min-width:768px){
+        left: -14.5px;  
+    }
+
+    @media screen and(min-width:1344px){
+        left: -85px;  
+    }
+    
+    &::before{
+    background-image: url(../images/Reviews/Arrow-right.svg);
+    background-repeat: no-repeat;
+
+    font-family: 'slick';
+    font-size: 27px;
+    line-height: 1;
+
+    opacity: 1;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    @media screen and(max-width:767px){
+        display: none;  
+    }
+
+}
+}
+}
+.slick-prev,
+.slick-next
+{
+    font-size: 0;
+    line-height: 0;
+    position: absolute;
+    display: block;
+    top: 50%;
+    width: 25px;
+    height: 25px;
+    padding: 0;
+    -webkit-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+
+    cursor: pointer;
+
+    color: transparent;
+    border: none;
+    outline: none;
+    background: transparent;
+
+}}
+
+.slider2{
 .slick{
     &-next{
         @media screen and(max-width:767px){
@@ -310,7 +428,7 @@
 
 &-prev{
     @media screen and(max-width:767px){
-        left: 2px;  
+      left: -2px;
        
     }
     
@@ -334,6 +452,7 @@
 
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
 }
 }
 }
@@ -358,7 +477,10 @@
     border: none;
     outline: none;
     background: transparent;
-    @media screen and(max-width:767px){
-        top: 109%;
+    // @media screen and(max-width:767px){
+    //     top: 55%;
+    // }
+
 }
+
 }
