--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -168,7 +168,37 @@
       </ul>
 
       <!-- Список иконок phone -->
-      <ul class="reviews-phone list">
+      <ul class="slider2 reviews-phone list">
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo1.webp 1x , ./images/Reviews/photo1@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo1.jpg 1x, ./images/Reviews/photo1@2x.jpg 2x"
+                src="./images/Reviews/photo1.jpg" alt="Фотография создателя отзыва" />
+            </picture>
+          </a>
+        </li>
+     
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo2.webp 1x , ./images/Reviews/photo2@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo2.jpg 1x, ./images/Reviews/photo2@2x.jpg 2x"
+                src="./images/Reviews/photo2.jpg" alt="Фотография создателя отзыва" />
+            </picture>
+          </a>
+        </li>
+  
+        <li class="item">
+          <a class="link" href="">
+            <picture>
+              <source srcset="./images/Reviews/photo3.webp 1x , ./images/Reviews/photo3@2x.webp 2x" type="image/webp" />
+              <img srcset="./images/Reviews/photo3.jpg 1x, ./images/Reviews/photo3@2x.jpg 2x"
+                src="./images/Reviews/photo3.jpg" alt="Фотография создателя отзыва" />
+            </picture>
+          </a>
+        </li>
+
         <li class="item">
           <a class="link" href="">
             <picture>
@@ -199,6 +229,7 @@
           </a>
         </li>
       </ul>
+  
     </div>
   </div>  
 </section>
