--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -40,8 +40,8 @@ button:hover {
       url('./../images/hero/icecream/icecream-tablet@1x.png'),
       url('./../images/hero/eclipse.svg');
     background-size: 168px 133px, 143px 336px, 324px 322px;
-    background-position: left calc(50% + 250px) bottom,
-      left calc(50% + 40px) top 83px, left calc(50% + 50px) top 42px;
+    background-position: left calc(50% + 265px) bottom,
+      left calc(50% + 60px) top 83px, left calc(50% + 92px) top 42px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -151,6 +151,9 @@ button:hover {
   @media screen and (max-width: 767px) {
     display: none;
   }
+  @media screen and (min-width: 768px) {
+    width: 160px;
+  }
 }
 
 .icon-open {
@@ -199,7 +202,8 @@ button:hover {
     }
 
     @media screen and (min-width: 768px) {
-      font-size: 37px;
+      font-size: 33px;
+      line-height: 0.88;
     }
 
     @media screen and (min-width: 1200px) {
@@ -412,7 +416,6 @@ ul.menu-list li.modal-menu-item {
   margin: 0;
   padding-top: 13px;
   padding-bottom: 11px;
-  border: 1px solid #e18298;
 }
 li.modal-menu-item:hover a {
   color: getColor(title);
