Разместил ДИВЫ по бокам

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container-footer">
+  <div class="container-footer container">
     <div class="footer-text">
       <h2 class="footer-row">homemade ice cream made</h2>
       <p class="footer-text-row">with passion</p>
