--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -58,7 +58,6 @@
 }
 .footer-socials {
   border-bottom: 1px solid #e1e1e1;
-  flex-wrap: wrap;
 }
 .footer-text {
   display: block;
@@ -95,10 +94,7 @@
 .footer-tel-span {
   color: #d41443;
 }
-.footer {
-  display: flex;
-  flex-wrap: wrap;
-}
+
 .footer-socials-list {
   display: inline-flex;
   margin-left: auto;
@@ -106,5 +102,7 @@
 }
 
 .container-footer {
+  display: flex;
   justify-content: space-between;
+  // align-items: center;
 }
