--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -13,9 +13,8 @@
   text-transform: uppercase;
   color: $subtitleTextColor;
   margin-top: 0;
-  margin-bottom: 17px;
+  margin-bottom: 15px;
   padding-right: 100px;
-  padding-bottom: 43px;
 }
 .footer-text-row {
   font-size: 34px;
@@ -97,8 +96,8 @@
 
 .footer-socials-list {
   display: inline-flex;
-  margin-left: auto;
-  text-align: right;
+  // margin-left: auto;
+  // text-align: right;
 }
 
 .container-footer {
