--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,35 +1,37 @@
-<footer class="footer">
-  <div class="footer-text">
-    <h2 class="footer-row">homemade ice cream made</h2>
-    <span>with passion</span>
-  </div>
-  <div class="footer-socials">
-    <ul class="footer-socials-list list">
-      <li class="socials-item">
-        <a class="socials-link link" href="https://github.com/"></a>
-        <svg class="socials-icon" width="32" height="32">
-          <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
-        </svg>
-      </li>
-      <li class="socials-item">
-        <a href="https://web.telegram.org/#/login" class="socials-link"></a>
-        <svg class="socials-icon" width="32" height="32">
-          <use href="./images/icons/symbol-defs.svg#icon-telegram.svg"></use>
-        </svg>
-      </li>
-      <li class="socials-item">
-        <a class="socials-link link" href="https://www.facebook.com/"></a>
-        <svg class="socials-icon" width="32" height="32">
-          <use href="./images/icons/symbol-defs.svg#icon-facebook.svg"></use>
-        </svg>
-      </li>
-    </ul>
-    <address>
-      <p class="footer-tel">
-        Feel free to contact
-        <span class="footer-tel-span">+61 (0) 383 766 284</span>
-      </p>
-    </address>
+<footer class="container footer">
+  <div class="footer-posishon">
+    <div class="footer-text">
+      <h2 class="subtitle">homemade ice cream made</h2>
+      <h2 class="title">with passion</h2>
+    </div>
+    <div class="footer-socials">
+      <ul class="footer-socials-list list">
+        <li class="socials-item">
+          <a class="socials-link link" href="https://github.com/"></a>
+          <svg class="socials-icon" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-github.svg"></use>
+          </svg>
+        </li>
+        <li class="socials-item">
+          <a href="https://web.telegram.org/#/login" class="socials-link"></a>
+          <svg class="socials-icon" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-telegram.svg"></use>
+          </svg>
+        </li>
+        <li class="socials-item">
+          <a class="socials-link link" href="https://www.facebook.com/"></a>
+          <svg class="socials-icon" width="32" height="32">
+            <use href="./images/icons/symbol-defs.svg#icon-facebook.svg"></use>
+          </svg>
+        </li>
+      </ul>
+      <address>
+        <p class="footer-tel">
+          Feel free to contact
+          <span class="footer-tel-span">+61 (0) 383 766 284</span>
+        </p>
+      </address>
+    </div>
   </div>
   <div>
     <p class="copyright">&copy 2019 - IceCream. All Rights Reserved.</p>
