--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,6 +3,18 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.footer-posishon {
+  display: flex;
+  justify-content: space-between;
+}
+.footer-socials-list {
+  display: flex;
+  flex-direction: reverse;
+
+  margin-bottom: 46px;
+}
+
 .footer-row {
   font-family: 'Titan One', cursive;
   font-style: normal;
@@ -28,19 +40,6 @@
 .footer-list {
   list-style: none;
   display: inline-flex;
-}
-
-.footer-title {
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 34px;
-  line-height: 1.14;
-  letter-spacing: 0.04em;
-  text-transform: uppercase;
-  color: #d41443;
-  padding-right: 100px;
-  padding-bottom: 43px;
 }
 .socials-link {
   text-decoration: none;
