--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -47,8 +47,8 @@
           </ul>
           <button type="button" class="btn appeal-two">
             Read more
-            <svg class="btn-icon" height="8" width="8">
-              <use href="./images/icon/sprite.svg#icon-button-sign"></use>
+            <svg class="btn-icon next-two">
+              <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
             </svg>
           </button>
         </div>
