добавлен ховер на кнопку

--- a/src/sass/layouts/_manufacture.scss
+++ b/src/sass/layouts/_manufacture.scss
@@ -104,7 +104,12 @@
     line-height: 1.94;
   }
 }
-
+.button-secondary {
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+  }
+}
 .button-manufacture {
   margin-top: 0;
   margin-bottom: 37px;
