--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -1,20 +1,19 @@
 .footer__container {
   @media screen and (min-width: $tablet) {
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px;
   }
 }
 
 .footer__wrapper_left {
-  margin-bottom: 40px;
-  width: 234px;
-
-  @media screen and (min-width: $tablet) {
-    margin-bottom: 0;
+  @media screen and (max-width: $mobile-max) {
+    margin-bottom: 40px;
+    width: 234px;
   }
 
-  @media screen and (min-width: $desktop) {
-    width: 474px;
-    height: 117px;
+  @media screen and (min-width: $tablet) and (max-width: $tablet-max) {
+    width: 340px;
   }
 }
 
@@ -30,17 +29,12 @@
   color: $dark-pink-color;
 
   @media screen and (min-width: $tablet) {
-    width: 340px;
-    height: 57px;
-
     font-size: 30px;
     line-height: 1.13;
     letter-spacing: 0.04em;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 472px;
-    height: 34px;
   }
 }
 
@@ -55,17 +49,11 @@
   color: $main-red-color;
 
   @media screen and (min-width: $tablet) {
-    width: 340px;
-    height: 110px;
-    margin-top: 16px;
-
     font-size: 57px;
     letter-spacing: 0.06em;
   }
 
   @media screen and (min-width: $desktop) {
-    width: 474px;
-    height: 66px;
   }
 }
 
@@ -100,6 +88,7 @@
 
   border-radius: 50%;
   background-color: $light-pink-color;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: $tablet) {
     width: 34px;
@@ -148,15 +137,11 @@
   border-top: 1px solid #e1e1e1;
 
   @media screen and (min-width: $tablet) {
-    width: 276px;
-    height: 26px;
-    margin-left: 32%;
   }
 }
 
 .footer__copyright-text {
   display: block;
-  width: 180px;
   margin-left: auto;
   margin-right: auto;
 
@@ -166,4 +151,8 @@
   text-align: center;
 
   color: $main-grey-color;
+
+  @media screen and (max-width: $tablet-max) {
+    width: 180px;
+  }
 }
