--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -316,3 +316,14 @@
     box-shadow: 0px 1px 18px 6px $color-line-modal;
   }
 
+//   .portfolio-card a:hover .card-text,
+//   .portfolio-card a:focus .card-text{
+//     opacity: 1;
+//     transform: translateY(0);
+//   }
+
+.locations-item:hover {
+border: 3px solid #ffb8ca;
+color: #c2e297;
+background: rgba(0,0,0,0);
+}
