--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -40,7 +40,7 @@
     <div class="hero-network-block">
       <p class="hero-network">16</p>
       <span class="hero-network-text">cafes</span>
-      <p class="hero-network">23</p>
+      <p class="hero-network second">23</p>
       <span class="hero-network-text">food trucks</span>
     </div>
 
