--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -4,25 +4,62 @@
   background-image: url(../images/hero/mob-icecream.png),
     radial-gradient(
       circle farthest-side at 61% 51%,
-      #ffa5ba 172px,
-      #ffb8ca 172px
+      var(--hero-elipse-color) 172px,
+      var(--hero-background-color) 172px
     );
   background-size: 171px, cover;
   background-repeat: no-repeat;
   background-position: left 63% bottom 0, left 0 top 0;
 
-  // привязать к основным цветам
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 280px) and (max-width: 767px),
+    screen and (min-resolution: 192dpi) and (min-width: 280px) and (max-width: 767px),
+    screen and (min-resolution: 2dppx) and (min-width: 280px) and (max-width: 767px) {
+    background-image: url(../images/hero/mob-icecream@2x.png),
+      radial-gradient(
+        circle farthest-side at 61% 51%,
+        var(--hero-elipse-color) 172px,
+        var(--hero-background-color) 172px
+      );
+  }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1199px),
+    screen and (min-resolution: 192dpi) and (min-width: 768px) and (max-width: 1199px),
+    screen and (min-resolution: 2dppx) and (min-width: 768px) and (max-width: 1199px) {
+    height: 399px;
+    background-image: url(../images/hero/tab-icecream@2x.png),
+      radial-gradient(
+        circle farthest-side at 61% 48%,
+        var(--hero-elipse-color) 162px,
+        var(--hero-background-color) 162px
+      );
+    background-size: 143px, cover;
+    background-position: left 58.5% bottom 0, left 0 top 0;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     height: 399px;
     background-image: url(../images/hero/tab-icecream.png),
       radial-gradient(
         circle farthest-side at 61% 48%,
-        #ffa5ba 162px,
-        #ffb8ca 162px
+        var(--hero-elipse-color) 162px,
+        var(--hero-background-color) 162px
       );
     background-size: 143px, cover;
     background-position: left 58.5% bottom 0, left 0 top 0;
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px),
+    screen and (min-resolution: 192dpi) and (min-width: 1200px),
+    screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+    height: 665px;
+    background-image: url(../images/hero/desktop-icecream@2x.png),
+      radial-gradient(
+        circle farthest-side at 58% 48%,
+        var(--hero-elipse-color) 269px,
+        var(--hero-background-color) 269px
+      );
+    background-size: 236px, cover;
+    background-position: left 56% bottom 0, left 0 top 0;
   }
 
   @media screen and (min-width: 1200px) {
@@ -30,8 +67,8 @@
     background-image: url(../images/hero/desktop-icecream.png),
       radial-gradient(
         circle farthest-side at 58% 48%,
-        #ffa5ba 269px,
-        #ffb8ca 269px
+        var(--hero-elipse-color) 269px,
+        var(--hero-background-color) 269px
       );
     background-size: 236px, cover;
     background-position: left 56% bottom 0, left 0 top 0;
@@ -54,7 +91,7 @@
 
 .hero-titul {
   width: 220px;
-  font-family: Titan One;
+  font-family: $secondary-font;
   font-weight: normal;
   font-size: 26px;
   line-height: 1.15;
@@ -77,7 +114,7 @@
 .hero-tityl-one {
   font-size: 48px;
   line-height: 0.96;
-  color: #d41443; // привязаться к основным цветам
+  color: var(--text-red-color);
 
   @media screen and (min-width: 768px) {
     font-size: 34px;
@@ -96,7 +133,7 @@
   padding: 0 14px; // перепроверить падинг после подключения шрифтов
   border-radius: 20px;
   /*шрифты*/
-  font-family: DM Sans;
+  font-family: $main-font;
   font-weight: 400;
   font-size: 8px;
   line-height: 1.25;
@@ -137,11 +174,12 @@
 .hero-text {
   position: relative;
   margin-left: -4px;
+  font-family: $main-font;
   width: 114px;
   font-weight: 400;
   font-size: 8px;
   line-height: 150%;
-  color: #ffffff;
+  color: var(--primary-white-color);
 
   @media screen and (min-width: 1200px) {
     width: 200px;
@@ -159,12 +197,12 @@
   border-radius: 50%;
   height: 18px;
   width: 18px;
-  background-color: #ffffff;
+  background-color: var(--primary-white-color);
 
   & svg {
     height: 33%;
     width: 33%;
-    fill: #d41443;
+    fill: var(--text-red-color);
   }
 
   @media screen and (min-width: 1200px) {
@@ -183,7 +221,7 @@
     flex-direction: column;
     right: 44px;
     top: 96px;
-    z-index: 1000;
+    z-index: 2;
   }
   @media screen and (min-width: 1200px) {
     right: 115px;
@@ -192,30 +230,58 @@
 }
 
 .hero-network {
-  display: inline-block;
-  height: 53px;
-  font-family: Titan One;
+  position: relative;
+  font-family: $secondary-font;
   font-style: normal;
   font-weight: 400;
   font-size: 28px;
   line-height: 1.143;
-  //text-align: right;
+  text-align: right;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: #d41443;
+  color: var(--text-red-color);
+
+  &::after {
+    position: absolute;
+    top: -2px;
+    right: -10px;
+    content: '';
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: #ffffff;
+    z-index: -1;
+
+    @media screen and (min-width: 1200px) {
+      width: 30px;
+      height: 30px;
+      top: -4px;
+      right: -18px;
+    }
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 46px;
-    line-height: 15.2;
+    line-height: 1.152;
+  }
+}
+
+.second {
+  margin-top: 14px;
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 18px;
   }
 }
 
 .hero-network-text {
   font-weight: normal;
+  font-family: $main-font;
   font-size: 8px;
   line-height: 1.25;
   text-align: right;
-  color: #ffffff;
+  color: var(--primary-white-color);
 
   @media screen and (min-width: 1200px) {
     font-size: 14px;
