--- a/css/main.css
+++ b/css/main.css
@@ -1361,7 +1361,7 @@ header .btn {
 .footer {
   position: relative;
   padding-bottom: 25px;
-  background-color: #fff5f6;
+  background-color: var(--description-background-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -1449,7 +1449,7 @@ header .btn {
   font-size: 34px;
   line-height: 1.147;
   text-transform: uppercase;
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -1482,7 +1482,7 @@ header .btn {
   font-size: 18px;
   line-height: 1.166;
   text-transform: uppercase;
-  color: #ffa5ba;
+  color: var(--text-pink-color);
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -1536,7 +1536,7 @@ header .btn {
   align-items: center;
   width: 32px;
   height: 32px;
-  color: #fff;
+  color: var(--primary-white-color);
   border-radius: 50%;
   background: #fea5bb;
   transition: background 250ms linear;
@@ -1551,7 +1551,7 @@ header .btn {
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-  background: #d41443;
+  background: var(--text-red-color);
 }
 
 .footer-social-icon {
@@ -1563,7 +1563,7 @@ header .btn {
   font-weight: 700;
   font-size: 12px;
   line-height: 186%;
-  color: #000000;
+  color: var(--primary-black-color);
   letter-spacing: 0.02em;
 }
 
@@ -1581,7 +1581,7 @@ header .btn {
 }
 
 .footer-color-link {
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
 .footer-text {
@@ -1589,7 +1589,7 @@ header .btn {
   font-weight: 700;
   font-size: 14px;
   line-height: 152%;
-  color: #907e82;
+  color: var(--text-grey-color);
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
