--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   position: relative;
   padding-bottom: 25px;
-  background-color: #fff5f6;
+  background-color: var(--description-background-color);
 
   @media screen and (min-width: 768px) {
     padding-bottom: 18px;
@@ -77,7 +77,7 @@
   line-height: 1.147;
   text-transform: uppercase;
 
-  color: #d41443;
+  color: var(--text-red-color);
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     width: 200px;
@@ -105,7 +105,7 @@
   line-height: 1.166;
   text-transform: uppercase;
 
-  color: #ffa5ba;
+  color: var(--text-pink-color);
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     margin-bottom: 17px;
@@ -155,7 +155,7 @@
   width: 32px;
   height: 32px;
 
-  color: #fff;
+  color: var(--primary-white-color);
   border-radius: 50%;
   background: #fea5bb;
 
@@ -169,7 +169,7 @@
 
 .footer-social-link:hover,
 .footer-social-link:focus {
-  background: #d41443;
+  background: var(--text-red-color);
 }
 
 .footer-social-icon {
@@ -182,7 +182,7 @@
   font-size: 12px;
   line-height: 186%;
 
-  color: #000000;
+  color: var(--primary-black-color);
   letter-spacing: 0.02em;
 
   @media screen and (min-width: 320px) {
@@ -196,7 +196,7 @@
 }
 
 .footer-color-link {
-  color: #d41443;
+  color: var(--text-red-color);
 }
 
 .footer-text {
@@ -205,7 +205,7 @@
   font-size: 14px;
   line-height: 152%;
 
-  color: #907e82;
+  color: var(--text-grey-color);
 
   @media screen and (min-width: 320px) and (max-width: 767px) {
     display: block;
