--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,9 @@
 <header class="header">
-  <div class="header-block">
+  <div class="header-block container">
     <a href="./index.html" class="logo">
       <img src="./images/header/mob-logo.png" alt="logo" />
     </a>
 
-    <!-- burger-menu-btn -->
     <!-- mobile/tablet menu-button -->
     <button
       type="button"
@@ -53,33 +52,33 @@
       </button>
     </div>
   </div>
-
-  <!-- mobile/tablet menu -->
-
-  <div class="menu-container" id="menu-container" data-menu>
-    <button type="button" class="mob-menu-btn btn appeal-two">
-      Buy now
-      <svg class="btn-icon next-two">
-        <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
-      </svg>
-    </button>
-
-    <ul class="mob-menu-list">
-      <li class="mob-menu-item">
-        <a class="mob-menu-link" href="">Home</a>
-      </li>
-      <li class="mob-menu-item">
-        <a class="mob-menu-link" href="">About us</a>
-      </li>
-      <li class="mob-menu-item">
-        <a class="mob-menu-link" href="">How it’s made?</a>
-      </li>
-      <li class="mob-menu-item">
-        <a class="mob-menu-link" href="">Our products</a>
-      </li>
-      <li class="mob-menu-item">
-        <a class="mob-menu-link" href="">Contact</a>
-      </li>
-    </ul>
-  </div>
 </header>
+
+<!-- mobile/tablet menu -->
+
+<div class="menu-container" id="menu-container" data-menu>
+  <button type="button" class="mob-menu-btn btn appeal-two">
+    Buy now
+    <svg class="btn-icon next-two">
+      <use href="./images/svg/sprite.svg#icon-move-to-next"></use>
+    </svg>
+  </button>
+
+  <ul class="mob-menu-list">
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Home</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">About us</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">How it’s made?</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Our products</a>
+    </li>
+    <li class="mob-menu-item">
+      <a class="mob-menu-link" href="">Contact</a>
+    </li>
+  </ul>
+</div>
