Поправил в секции Хиро: не отображалась кривая линия

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,20 +3,16 @@
   max-width: 1900px;
   margin: 0 auto;
   &__top {
-    background-image: url(../images/hero/bg-line-mobile.png);
-    background-size: cover;
-    background-position: center bottom -25px;
-    background-repeat: no-repeat;
+    background-image: url(../images/hero/girls-mobile.png),
+      url(../images/hero/bg-line-mobile.png);
+    background-size: 208px 177.5px, cover;
+    background-position: center bottom 47px, center bottom -25px;
+    background-repeat: no-repeat, no-repeat;
 
     margin-bottom: -25px;
     padding-bottom: 25px;
 
     height: 100%;
-
-    background-image: url(../images/hero/girls-mobile.png);
-    background-size: 208px 177.5px;
-    background-position: center bottom 47px;
-    background-repeat: no-repeat;
   }
   &__body {
     height: 618px;
@@ -111,10 +107,8 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .hero__top {
-    background-image: url(../images/hero/bg-line-mobile@2x.png);
-  }
-  .hero__top .container {
-    background-image: url(../images/hero/girls-mobile@2x.png);
+    background-image: url(../images/hero/girls-mobile@2x.png),
+      url(../images/hero/bg-line-mobile@2x.png);
   }
 }
 
@@ -122,18 +116,14 @@
 @media screen and (min-width: 768px) {
   .hero {
     &__top {
-      background-image: url(../images/hero/bg-line-tablet.png);
-      background-size: cover;
-      background-position: center bottom -10px;
-      background-repeat: no-repeat;
+      background-image: url(../images/hero/girls-tablet.png),
+        url(../images/hero/bg-line-tablet.png);
+      background-size: 376px 320px, cover;
+      background-position: calc(50% + 180px) 172px, center bottom -10px;
+      background-repeat: no-repeat, no-repeat;
 
       margin-bottom: -10px;
       padding-bottom: 10px;
-
-      background-image: url(../images/hero/girls-tablet.png);
-      background-size: 376px 320px;
-      background-position: calc(50% + 180px) 172px;
-      background-repeat: no-repeat;
     }
     &__body {
       height: 556.5px;
@@ -180,10 +170,8 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero__top {
-      background-image: url(../images/hero/bg-line-tablet@2x.png);
-    }
-    .hero__top .container {
-      background-image: url(../images/hero/girls-tablet@2x.png);
+      background-image: url(../images/hero/girls-tablet@2x.png),
+        url(../images/hero/bg-line-tablet@2x.png);
     }
   }
 }
@@ -192,19 +180,14 @@
 @media screen and (min-width: 1344px) {
   .hero {
     &__top {
-      background-image: url(../images/hero/bg-line-desktop.png);
-      background-size: cover;
-      background-position: center bottom -10px;
-      background-repeat: no-repeat;
+      background-image: url(../images/hero/girls-desktop.png),
+        url(../images/hero/bg-line-desktop.png);
+      background-size: 842px 718px, cover;
+      background-position: calc(50% + 380px) 150px, center bottom -10px;
+      background-repeat: no-repeat, no-repeat;
 
       margin-bottom: -10px;
       padding-bottom: 10px;
-
-      background-image: url(../images/hero/girls-desktop.png);
-      background-size: 842px 718px;
-      background-position: calc(50% + 380px) 150px;
-      background-repeat: no-repeat;
-      // right -120px bottom 20px
     }
 
     &__body {
@@ -266,21 +249,8 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero__top {
-      background-image: url(../images/hero/bg-line-desktop@2x.png);
-    }
-    .hero__top .container {
-      background-image: url(../images/hero/girls-desktop@2x.png);
+      background-image: url(../images/hero/girls-desktop@2x.png),
+        url(../images/hero/bg-line-desktop@2x.png);
     }
   }
 }
-
-// @media screen and (min-width: 1688px) {
-//   .hero {
-//     .container {
-//       max-width: 1688px;
-//       padding-left: 183px;
-//       padding-right: 183px;
-//       background-position: right bottom 20px;
-//     }
-//   }
-// }
